증상 전달 변경